test/spec_vectors/load/fail/module_57.wat
(module (memory 0) (func $type-address-empty-in-memory.grow (memory.grow (i32.load)) (drop)))